@@ -42,6 +42,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7773: Fix an UnboundLocalError in platform.linux_distribution() when
+  the release file is empty.
+
 - Issue #7748: Since unicode values are supported for some metadata options
   in Distutils, the DistributionMetadata get_* methods will now return an utf-8
   encoded string for them. This ensure that the upload and register commands
